2008-12-23  Andrew Pinski  <pinski@gmail.com>

PR middle-end/38590
        * fold-const.c (fold_binary): Call fold_convert on arguments to
        fold_build2 for negative divide optimization.

2008-12-23  Andrew Pinski  <pinskia@gmail.com>

        PR middle-end/38590
        * gcc.c-torture/compile/pr38590-1.c: New testcase.
        * gcc.c-torture/compile/pr38590-2.c: New testcase.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@142906 138bc75d-0d04-0410-961f-82ee72b054a4