gcc/testsuite/gcc.c-torture/compile/pr38590-1.c
@@ -1,0 +1,6 @@
+
+int func_75 (int p_76) 
+{
+  return (1 / (int) -(unsigned int)p_76);
+}
+
